--- a/src/Components/footer/footer.css
+++ b/src/Components/footer/footer.css
@@ -1,6 +1,6 @@
 .part9{
 padding: 30px 0;
-	background: #f54748;
+background: #9e226a;
 
 	
 color: white;
@@ -15,7 +15,7 @@ color: white;
 .list_itm p:hover{
 	
 	font-size: 13px;
-	color:#fdc55e;
+	color:#ff8dcf;
 }
 .f_col
 {
