--- a/src/Components/home/home.css
+++ b/src/Components/home/home.css
@@ -2,12 +2,41 @@
 
 	width: 100%;
 
-	background: linear-gradient(180deg, rgba(255,248,230,1) 0%, rgba(255,255,255,1) 100%);
+	background: white;
 
 	
 	
 }
+.part_first img {
+    height: 665px;
+}
+.part_first h3 {
+   font-weight: 800;
+}
 
+.graddd
+{
+
+	height: 500px;
+
+	color: linear-gradient(rgba(0, 0, 0, 0.1),rgba(0, 0, 0, 0.9));
+}
+
+.overlay {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+	background: linear-gradient(0deg, rgb(0 0 0 / 90%) 0%, rgb(47 47 54 / 50%) 35%, rgb(229 229 229 / 10%) 100%);
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+   
+}
+
+
+.carousel-item
 
 .part2 {
     background: #f54748;
@@ -197,11 +226,8 @@ h5.card-title.layout1{
 
 
 
-
 .card{
-	border: none!important; 
-    border-radius: 0!important;
-    background-color: transparent!important;
+	border: none!important;
 }
 
 
@@ -286,7 +312,7 @@ color: white;
 
 .part3
 {
-	background: #fdc55e;
+    background: #9e226a;
 	
 	width: 100%;
 	color: white;
@@ -296,8 +322,10 @@ color: white;
 
 .part3 h3
 {
-	color: #141414;
-	font-weight: 800;
+	
+		color: #ffffff;
+		font-weight: 800;
+	
 	
 }
 
@@ -424,7 +452,9 @@ svg.svg-inline--fa.fa-instagram:hover{
 }
 
 
-
+.part2 h3{
+	color: #111010;
+}
 
 
 .opinion.card-body{
@@ -441,4 +471,9 @@ svg.svg-inline--fa.fa-instagram:hover{
 	#home {
 		padding: 6rem 1rem !important;
 	}
+}
+
+
+.col_img{
+	background-image: url(./img/background_img.png);
 }
