--- a/src/Components/home/sections/Products.css
+++ b/src/Components/home/sections/Products.css
@@ -22,3 +22,65 @@ h1{
 
 
 }
+
+
+.card {
+  position: relative;
+  margin: .5rem 0 1rem 0;
+  background-color: #fff;
+  -webkit-transition: -webkit-box-shadow .25s;
+  transition: -webkit-box-shadow .25s;
+  transition: box-shadow .25s;
+  transition: box-shadow .25s, -webkit-box-shadow .25s;
+  border-radius: 25px;
+}
+.card-image img {
+  display: block;
+  border-radius: 25px 25px 0 0;
+  position: relative;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+}
+img {
+  border-style: none;
+}
+
+.card-image {
+  position: relative;
+  border-radius: 25px 25px 0 0;
+}
+
+.products img{
+  height: 300px;
+}
+
+
+
+.card-title {
+  margin-bottom: 0.5rem;
+  margin-top: 10px;
+  color: #444444;
+  font-size: 22px;
+  font-weight: 600;
+  margin-left: 10px;
+}
+.products h2 {
+  color: #9e226a;
+  margin-left: 10px;
+  font-weight: 800;
+  font-size: 50px;
+}
+
+.icon_size img{
+  width: 80%;
+  height: 15px;
+}
+
+.icon_size {
+ 
+  float: left;
+  margin-left: 10px;
+}
