--- a/src/Components/home/sections/Slider.css
+++ b/src/Components/home/sections/Slider.css
@@ -1,7 +1,7 @@
 .card-body {
     color: #a7a7a4;
        background: #ffffff;
-    border-radius: 20px;
+       border-radius: 0 0 25px 25px;
     box-shadow: 5px 5px 16px #00000091;
 }
 
@@ -74,3 +74,13 @@
 }
 
 
+.c_img{
+    width: 100%;
+    height: 200px;
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+}
+a {
+ 
+    text-decoration: none;
+}
