--- a/src/Components/home/sections/All_Category.css
+++ b/src/Components/home/sections/All_Category.css
@@ -4,7 +4,7 @@
 
 .nav-tabs .nav-link {
 
-    border-radius: 0.25rem!important;
+    border-radius: 0;
 
     }
 
@@ -12,25 +12,31 @@
 
 
 ul.mb-3.nav.nav-tabs {
-    padding: 50px;
+ 
     justify-content: center;
 }
 
 .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
-    color: #9e226a;
-    background-color: #fff;
-    border-color: #dee2e6 #dee2e6 #fff;
+    color: #fff;
+    background-color: #D05278;
+    border: none;
+    
 }
 
-.nav-link {
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link {
     display: block;
-    padding: 0.5rem 1rem;
-    color: white;
-    text-decoration: none;
-    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out;
+    padding: 7px 30px;
+    color: #666666;
+    background-color: #FAF9FF;
+    border: 1px solid #EEEEEE;
+    font-size: 14px;
+    
 }
 
 
-.part_catg{
-    background: #ff8dcf;
+
+.nav-tabs .nav-item {
+    display: inline-block;
+    margin-left: 5px;
+    margin-right: 5px;
 }
