--- a/src/Components/home/sections/Slider.css
+++ b/src/Components/home/sections/Slider.css
@@ -1,8 +1,8 @@
 .card-body {
     color: #a7a7a4;
        background: #ffffff;
-       border-radius: 0 0 25px 25px;
-    box-shadow: 5px 5px 16px #00000091;
+      
+
 }
 
 .old_price{
@@ -67,11 +67,7 @@
 
 }
 
-.btn2 {
-    background-color: #f54748!important;
-    color: white!important;
-    border: none!important;
-}
+
 
 
 .c_img{
@@ -84,3 +80,90 @@ a {
  
     text-decoration: none;
 }
+
+
+
+.card .content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .card .elms-animation,
+  .card .content {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+  }
+  .card .elms-animation {
+    z-index: 5;
+  }
+  .card .elms-animation span {
+    position: absolute;
+    background-color: rgba(224, 208, 208, 0.414);
+    height: 0;
+    width: 0;
+    transition: all .5s ease-out;
+  }
+  .card .elms-animation span.one {
+    top: 0; left: 0;
+  }
+  .card .elms-animation span.two {
+    top: 0; right: 0;
+  }
+  .card .elms-animation span.three {
+    left: 0; bottom: 0;
+  }
+  .card .elms-animation span.four {
+    right: 0; bottom: 0;
+  }
+  
+  .card:hover .elms-animation span {
+    width: 50%;
+    height: 50%;
+  }
+  
+  .card img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
+    display: block;
+  }
+  
+  .card .content {
+    z-index: 6;
+    visibility: hidden;
+  }
+  .card:hover .content {
+    animation: show .3s .4s linear forwards;
+  }
+  .card .content button {
+    padding: .6rem 1.3rem;
+    border: 3px solid #FFF;
+    background: transparent;
+    color: #FFF;
+    font-size: 1rem;
+    outline: none;
+    cursor: pointer;
+    transition: background .3s ease;
+  }
+  .card .content button:hover {
+    background: #FFF;
+    color: #333;
+  }
+  
+  @keyframes show {
+    to {
+      visibility: visible;
+    }
+  }  
+
+  .search{
+    width : 100%
+  }
+
+  .icon_div{
+    height: 180px;
+  }
