--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+
+  @import url('https://fonts.googleapis.com/css2?family=Mrs+Saint+Delafield&display=swap');
+
+
 body{
   background-color: #000935;
       font-family: "Lato", sans-serif !important;
