--- a/src/Components/home/home.css
+++ b/src/Components/home/home.css
@@ -1,3 +1,46 @@
+.cur_heading h2{
+	font-family: 'Mrs Saint Delafield', cursive;
+	color: #D05278;
+
+
+
+
+font-style: normal;
+font-weight: 400;
+font-size: 50px;
+
+
+}
+.cur_heading2 h2{
+	font-family: 'Mrs Saint Delafield', cursive;
+    color: #ffffff;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 60px;
+	line-height: 60px;
+
+
+}
+.cur_heading3 h2{
+	font-family: 'Mrs Saint Delafield', cursive;
+	color: #D05278;
+    font-style: normal;
+    font-weight: 400;
+	font-size: 40px;
+    line-height: 40px;
+
+
+}
+.cus_para{
+	width: 400px;
+}
+.part2 p {
+    margin-top: 25px;
+    margin-bottom: 25px;
+    padding: 0px 412px;
+    font-size: 16px;
+    color: #666666;
+}
 #home{
 
 	width: 100%;
@@ -10,6 +53,7 @@
 .part_first img {
     height: 665px;
 }
+
 .part_first h3 {
    font-weight: 800;
 }
@@ -38,15 +82,8 @@
 
 .carousel-item
 
-.part2 {
-    background: #f54748;
-    padding: 90px 0;
-}
 
-.part2 h3{
-	color: white;
-	font-weight: 800;
-}
+
 
 
 .img1 {
@@ -83,15 +120,28 @@ text-align: center;
 .btn1
 {
 
-   padding-right: 20px!important;
-    padding-left: 20px!important;
-    border-color: #ffffff!important;
-    margin-top: 20px;
-    background: #f54748!important;
+	border-color: #ffffff!important;
+   
+    background: #222222!important;
     color: #ffffff!important;
-    border-radius: 40px!important;
+
+	padding: 15px 30px!important;
+	font-size: 13px!important;
+	border-radius: 2px!important;
 }
 
+.btn2
+{
+
+	border-color: transparent!important;
+    margin-top: 20px;
+    background: #D05278!important;
+    color: #ffffff!important;
+
+	padding: 15px 30px!important;
+	font-size: 13px!important;
+	border-radius: 2px!important;
+}
 
 
 
@@ -168,7 +218,7 @@ h5.card-title.layout1{
 
 .row.custom_row
 {
-	padding: 100px;
+	
 	align-items: center;
 }
 .custom_row p
@@ -176,12 +226,11 @@ h5.card-title.layout1{
 	color: #A4A4A4;
 }
 
-.custom_row h1
-{
-	color: #141414;
-	font-weight: 800;
+.custom_row h1 {
+    color: #141414;
+    font-size: 90px;
+    line-height: 90px;
 }
-
 
 .custom_img_place{
 
@@ -197,23 +246,18 @@ h5.card-title.layout1{
 
 .custom_row2{
 
-	padding: 60px;
+	height: 900px;
 
 }
+.custom_row2 h1{
+	font-size: 60px;
 
-.btn2
-{
-
-    color: #111010!important;
-    background-color: #E3E3E3!important;
-    border-color: #111010!important;
-    font-weight: bold!important;
-    border: 1px solid black!important;
-
-   
-    font-size: 15px;
-     
 }
+.custom_row2 p{
+	color: white;
+	font-size: 15px;
+}
+
 
 .btn_row{
 
@@ -312,7 +356,7 @@ color: white;
 
 .part3
 {
-    background: #9e226a;
+    background: white;
 	
 	width: 100%;
 	color: white;
@@ -337,10 +381,16 @@ color: white;
 .part5{
 	 width: 100%;
  
-    display: block;
+   padding: 90px;
     background: white;
 }
-
+.part5 img{
+	height: 100px;
+    padding: 20px 0px;
+}
+.part5 .samp_logo{
+	margin: auto 70px;
+}
 
 .photo2
 {
@@ -374,10 +424,7 @@ color: white;
     padding: 3rem 0;
 }
 
-.part6
-{
-	background: #F5F5F5;
-}
+
 
 
 .title7{
@@ -386,10 +433,10 @@ color: white;
 	font-weight: 700;
 }
 
-.part6 p
+/* .part6 p
 {
 	font-size: 10px;
-}
+} */
 
 
 
@@ -401,11 +448,7 @@ color: white;
 	font-size: 12px;
 	color: #a4a4a4;
 }
-.list_itm p:hover{
-	
-	font-size: 13px;
-	color: white;
-}
+
 .f_col
 {
 	width: 80px;
@@ -453,9 +496,19 @@ svg.svg-inline--fa.fa-instagram:hover{
 
 
 .part2 h3{
-	color: #111010;
+	
+		color: #222222;
+	
+		font-size: 54px;
+	line-height: 54px;
+	
 }
-
+.part2.text-center {
+    padding: 90px 0;
+}
+.part4{
+	padding: 90px 0;
+}
 
 .opinion.card-body{
 	background: none!important;
@@ -476,4 +529,247 @@ svg.svg-inline--fa.fa-instagram:hover{
 
 .col_img{
 	background-image: url(./img/background_img.png);
+}
+
+.samp_logo{
+	margin: auto 40px;
+}
+.part4_content{
+	height: 800px;
+	background-image: url(./img/discount_img.png); ;
+}
+
+.part6 h3 {
+    color: #222222;
+    font-size: 54px;
+    line-height: 54px;
+}
+
+.part6 {
+    padding: 90px 0px;
+}
+
+/* .part6 p {
+    margin-top: 25px;
+    margin-bottom: 25px;
+    padding: 0px 412px;
+    font-size: 16px;
+    color: #666666;
+} */
+
+.part6row{
+	width: 100%;
+}
+.part6row .row{
+	width: 100%;
+	margin: 0;
+    padding: 0;
+}
+.part6_content.col-md-4 {
+    padding: 0;
+    margin: 0;
+}
+.tc_img{
+	height: 500px;
+	width: 300px;
+	background: red;
+}
+.part6row img{
+	width: 100%;
+}
+.part6row.row.text-center.justify-content-center.align-items-center {
+    margin: 0;
+}
+.part6row.row {
+    margin: 0;
+	column-gap: 22px;
+}
+
+
+.part6_content{
+
+	position: relative;
+
+}
+.part6_content button {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+	background-color: transparent;
+	color: white;
+	font-size: 16px;
+	padding: 12px 24px;
+	border: none;
+	cursor: pointer;
+	border-radius: 5px;
+  }
+  .part6_content .content2 button{
+
+	visibility: hidden;
+  }
+  .part6_content:hover .content2 button{
+
+	animation: show .2s .2s linear forwards;
+  }
+  .part6_content:hover img{
+	filter: opacity(50%);
+	
+	
+  }
+  .part6_content:hover .content2 img{
+	filter: opacity(100%);
+  }
+  .part7 img{
+	width: 100%;
+  }
+  .part7 .row{
+	width: 100%;
+	margin: 0;
+  }
+
+  .part6 .col-md-4 {
+    flex: 0 0 auto;
+    width: 32.333333%;
+}
+.part7 .col-md-6 {
+    flex: 0 0 auto;
+    width: 50%;
+    margin: 0;
+    padding: 0;
+}
+.part7_2{
+	background: #FCEDEA;
+}
+
+
+.part7_2_description {
+    padding: 100px;
+}
+.part7_2_description .primary_ptext{
+    margin-top: 25px;
+    margin-bottom: 25px;
+  
+    font-size: 20px;
+    color: #666666;
+}
+.part7_2_description .secondary_ptext{
+   
+  
+    font-size: 16px;
+    color: #666666;
+}
+.part7_2_description h3{
+	font-size: 54px;
+}
+.part8{
+	padding: 90px 0px;
+}
+
+.custom_heading{
+	color: #222222;
+    font-size: 54px;
+    line-height: 54px;
+}
+.custom_text{
+	margin-top: 25px;
+    margin-bottom: 25px;
+    padding: 0px 412px;
+    font-size: 16px;
+    color: #666666;
+}
+
+.part9_row{
+	padding: 50px 150px;
+}
+
+.part9 .card-title {
+  font-size: 24px;
+    text-align: left;
+	margin-left: 0;
+}
+.part9 .card-body {
+    flex: 1 1 auto;
+	padding: 20px 0px;
+}
+.part9 .card-text {
+	text-align: left;
+    font-size: 14px;
+    color: #666666;
+    line-height: 30px;
+    width: 415px;
+
+}
+
+.btn3{
+    border-color: transparent!important;
+    margin-top: 20px;
+    background: #ffffff!important;
+    color: #d05278!important;
+    padding: 5px 0px!important;
+    font-size: 13px!important;
+    text-align: left!important;
+    float: left;
+    align-self: baseline;
+}
+
+.part9 svg{
+	margin: 0px 5px;
+}
+
+.part10_bg{
+	background-color: #FCEDEA;
+}
+.part10row{
+	padding: 50px 150px;
+}
+.part10_desc {
+    padding: 50px 20px;
+}
+.part10 p {
+    color: #666666;
+}
+
+.part10 .form-control {
+    border-radius: 0px!important;
+}
+
+.part10 .form-control {
+    display: block;
+    width: 32%;
+    padding: 10px 20px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 2.5;
+    color: #212529;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    appearance: none;
+    border-radius: 0.25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.part11_row {
+
+	height: 200px;
+    background: red;
+    width: 100%;
+	
+}
+.part11_2{
+	width: 100%;
+	
+    background: rgb(70, 67, 146);
+}
+.part11_2_img{
+	width: 100%;
+	height: 100px;
+	background: yellow;
+}
+.part11_2_img img{
+	width: 100%;
+	height: 100%;
+	
 }
