--- a/src/Components/home/sections/Products.css
+++ b/src/Components/home/sections/Products.css
@@ -24,16 +24,7 @@ h1{
 }
 
 
-.card {
-  position: relative;
-  margin: .5rem 0 1rem 0;
-  background-color: #fff;
-  -webkit-transition: -webkit-box-shadow .25s;
-  transition: -webkit-box-shadow .25s;
-  transition: box-shadow .25s;
-  transition: box-shadow .25s, -webkit-box-shadow .25s;
-  border-radius: 25px;
-}
+
 .card-image img {
   display: block;
   border-radius: 25px 25px 0 0;
@@ -63,15 +54,15 @@ img {
   margin-bottom: 0.5rem;
   margin-top: 10px;
   color: #444444;
-  font-size: 22px;
-  font-weight: 600;
+  font-size: 24px;
+ 
   margin-left: 10px;
 }
 .products h2 {
-  color: #9e226a;
+  color: #666666;
   margin-left: 10px;
-  font-weight: 800;
-  font-size: 50px;
+  font-weight: 600;
+  font-size: 18px;
 }
 
 .icon_size img{
