--- a/src/Components/header/nav.css
+++ b/src/Components/header/nav.css
@@ -39,11 +39,11 @@
 
 
 .navbar {
-  background-color:#FCEDEA;
+  background-color: #FFFDF4;
 }
 
 .nav-item a {
-        color: #222222;
+        color: #1999B2;
     text-decoration: none;
     font-family: 'Roboto';
       /* font-weight: bold; */
@@ -55,7 +55,7 @@
 }
 
 a.active.active {
-  color: #D05278;
+  color: #1999B2;
   font-size: 15px;
   align-items: center;
  
@@ -73,7 +73,7 @@ a.active.active {
   border-radius: 10px!important;
 }
 .nav-item a:hover {
-     color: #D05278;
+     color: #1999B2;
 }
 
 
@@ -98,13 +98,9 @@ a.active.active {
 
 
 
-.nav-link:focus, .nav-link:hover {
-  color: #9e226a;
-}
 
-.navbar-nav {
-  margin-left: 50px;
-}
+
+
 
 .nav-items {
   height: 60px;
