--- a/src/Components/home/sections/Slider.css
+++ b/src/Components/home/sections/Slider.css
@@ -1,6 +1,6 @@
 .card-body {
     color: #a7a7a4;
-       background: #ffffff;
+       background: transparent;
       
 
 }
@@ -166,4 +166,7 @@ a {
 
   .icon_div{
     height: 180px;
+  }
+  .card{
+    background-color: transparent!important;
   }
