--- a/src/Components/home/sections/Slider.css
+++ b/src/Components/home/sections/Slider.css
@@ -186,3 +186,11 @@ a {
   color: white;
   text-align: left;
 }
+
+.price_text{
+  font-size: 24px;
+  color: white;
+text-align: left;
+margin-top: 5px;
+font-weight: 800;
+}
